Make Java 8-compatible